# references

./: .gitignore  README.md  spec_getting_started.md  spec_readme.md
astra-1680-deepx/: .gitignore  avocado.yaml
astra-1680-deepx/files/: 0001-dx_dma-fix-sleeping-in-atomic-BUG-in-dw_edma_free_de.patch  dx-app-clean.sh  (+13 more)
c-gpio/: .gitignore  README.md  app-clean.sh  app-compile.sh  app-install.sh  avocado.yaml  getting_started.md
cpp-tui-dashboard/: README.md  app-compile.sh  app-install.sh  avocado.yaml  getting_started.md
cpp-tui-dashboard/app/src/: CMakeLists.txt  main.cpp
deepx/: README.md  avocado.yaml
dev/: README.md  avocado.yaml  getting_started.md
docker-registry/: .avocado-state  README.md  avocado.yaml  getting_started.md
docker-save/: .avocado-state  .gitignore  README.md  avocado.yaml  build-image.sh  getting_started.md
elixir-phoenix/: .gitignore  README.md  avocado.yaml  elixir-clean.sh  elixir-compile.sh  elixir-install.sh  getting_started.md
icam-540/: README.md  avocado.yaml  getting_started.md
iphone-travel-router/: .stone-provision-usb.patched.sh  README.md  app-clean.sh  app-compile.sh  app-install.sh  avocado.yaml  getting_started.md
java-hello/: .gitignore  README.md  avocado.yaml  getting_started.md  java-compile.sh  java-install.sh
jetson-gpu-toolbox/: README.md  avocado.yaml  getting_started.md
linux-custom-kernel/: .gitignore  README.md  avocado.yaml  getting_started.md  kernel-clean.sh  kernel-compile.sh  kernel-install.sh  kernel-package-install.sh
nodejs-dashboard/: .gitignore  README.md  app-clean.sh  app-compile.sh  app-install.sh  avocado.yaml  getting_started.md
nvidia-deepstream/: .avocado-state  .gitignore  README.md  app-clean.sh  app-compile.sh  app-install.sh  avocado.yaml  getting_started.md
nvidia-gstreamer-yolo/: .gitignore  README.md  app-compile.sh  app-install.sh  getting_started.md
python-flask/: README.md  app-compile.sh  app-install.sh  avocado.yaml  getting_started.md
python-gstreamer-yolo/: README.md  avocado.yaml  getting_started.md
python-mqtt/: README.md  app-clean.sh  app-compile.sh  app-install.sh  avocado.yaml  getting_started.md
python-whisper/: .gitignore  README.md  app-clean.sh  app-compile.sh  app-install.sh  avocado.yaml  getting_started.md
python-yolo/: README.md  app-clean.sh  app-compile.sh  app-install.sh  avocado.yaml  getting_started.md
qemu-quickstart/: README.md  avocado.yaml  getting_started.md
react-dashboard/: .gitignore  README.md  avocado.yaml  getting_started.md  reactjs-clean.sh  reactjs-compile.sh  reactjs-install.sh
rubicon/: README.md  avocado.yaml  getting_started.md
rust-vitals/: .gitignore  README.md  avocado.yaml  getting_started.md  rust-compile.sh  rust-install.sh
rzv2n-drpai-yolo/: .gitignore  README.md  app-clean.sh  app-compile.sh  app-install.sh  avocado.yaml  fetch-model.sh  fetch-video.sh  getting_started.md  stone-rzv2n-sr-som.json
rzv2n-drpai-yolo/app/src/: CMakeLists.txt  main.cpp  yolov3.cpp  yolov3.h
shell-heartbeat/: .gitignore  README.md  avocado.yaml  getting_started.md
uboot-custom-imx8mp-evk/: .gitignore  README.md  avocado.yaml  getting_started.md  insert-fit-pubkey.sh  uboot-clean.sh  uboot-compile.sh  uboot-install.sh
webkit-ui/: README.md  avocado.yaml  getting_started.md
(+137 files in other folders)
